[gd_scene load_steps=16 format=2]

[ext_resource path="res://tileset/tilemap_house_interior.tres" type="TileSet" id=1]
[ext_resource path="res://sprites/sprsheet_patients.png" type="Texture" id=2]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=4]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=5]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=6]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/spr_patient4/spr_sad.png" type="Texture" id=8]
[ext_resource path="res://sprites/spr_mc/spr_happy.png" type="Texture" id=9]
[ext_resource path="res://sprites/spr_patient4/spr_neutral.png" type="Texture" id=10]
[ext_resource path="res://sprites/spr_mc/spr_concerned.png" type="Texture" id=11]
[ext_resource path="res://sprites/spr_mc/spr_neutral.png" type="Texture" id=12]
[ext_resource path="res://maps/chapter4/script/npc_patient4.gd" type="Script" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="chapter4-patient_house" type="Node2D"]

[node name="tilemap_house_interior" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -458760, 5, 65537, -458759, 5, 65537, -458758, 5, 65537, -458757, 5, 65537, -458756, 5, 65537, -458755, 5, 65537, -458754, 5, 65537, -458753, 5, 65537, -524288, 5, 65537, -524287, 5, 65537, -524286, 5, 65537, -524285, 5, 65537, -524284, 5, 65537, -524283, 5, 65537, -524282, 5, 65537, -524281, 5, 65537, -524280, 5, 65537, -524279, 5, 65537, -524278, 5, 65537, -524277, 5, 65537, -524276, 5, 65537, -524275, 5, 65537, -524274, 5, 65537, -524273, 5, 65537, -524272, 5, 65537, -524271, 5, 65537, -524270, 5, 65537, -524269, 5, 65537, -393224, 5, 65537, -393223, 5, 65537, -393222, 5, 65537, -393221, 5, 65537, -393220, 5, 65537, -393219, 5, 65537, -393218, 5, 65537, -393217, 5, 65537, -458752, 5, 65537, -458751, 5, 65537, -458750, 5, 65537, -458749, 5, 65537, -458748, 5, 65537, -458747, 5, 65537, -458746, 5, 65537, -458745, 5, 65537, -458744, 5, 65537, -458743, 5, 65537, -458742, 5, 65537, -458741, 5, 65537, -458740, 5, 65537, -458739, 5, 65537, -458738, 5, 65537, -458737, 5, 65537, -458736, 5, 65537, -458735, 5, 65537, -458734, 5, 65537, -458733, 5, 65537, -327688, 5, 65537, -327687, 5, 65537, -327686, 5, 65537, -327685, 5, 65537, -327684, 5, 65537, -327683, 5, 65537, -327682, 5, 65537, -327681, 5, 65537, -393216, 5, 65537, -393215, 5, 65537, -393214, 5, 65537, -393213, 5, 65537, -393212, 5, 65537, -393211, 5, 65537, -393210, 5, 65537, -393209, 5, 65537, -393208, 5, 65537, -393207, 5, 65537, -393206, 5, 65537, -393205, 5, 65537, -393204, 5, 65537, -393203, 5, 65537, -393202, 5, 65537, -393201, 5, 65537, -393200, 5, 65537, -393199, 5, 65537, -393198, 5, 65537, -393197, 5, 65537, -262152, 5, 65537, -262151, 5, 65537, -262150, 5, 65537, -262149, 5, 65537, -262148, 5, 65537, -262147, 5, 65537, -262146, 5, 65537, -262145, 5, 65537, -327680, 5, 65537, -327679, 5, 65537, -327678, 5, 65537, -327677, 5, 65537, -327676, 5, 65537, -327675, 5, 65537, -327674, 5, 65537, -327673, 5, 65537, -327672, 5, 65537, -327671, 5, 65537, -327670, 5, 65537, -327669, 5, 65537, -327668, 5, 65537, -327667, 5, 65537, -327666, 5, 65537, -327665, 5, 65537, -327664, 5, 65537, -327663, 5, 65537, -327662, 5, 65537, -327661, 5, 65537, -196616, 5, 65537, -196615, 5, 65537, -196614, 5, 65537, -196613, 5, 65537, -196612, 5, 65537, -196611, 5, 65537, -196610, 5, 65537, -196609, 5, 65537, -262144, 5, 65537, -262143, 5, 65537, -262142, 5, 65537, -262141, 5, 65537, -262140, 5, 65537, -262139, 5, 65537, -262138, 5, 65537, -262137, 5, 65537, -262136, 5, 65537, -262135, 5, 65537, -262134, 5, 65537, -262133, 5, 65537, -262132, 5, 65537, -262131, 5, 65537, -262130, 5, 65537, -262129, 5, 65537, -262128, 5, 65537, -262127, 5, 65537, -262126, 5, 65537, -262125, 5, 65537, -131080, 5, 65537, -131079, 5, 65537, -131078, 5, 65537, -131077, 5, 65537, -131076, 5, 65537, -131075, 5, 65537, -131074, 5, 65537, -131073, 5, 65537, -196608, 5, 65537, -196607, 5, 65537, -196606, 5, 65537, -196605, 5, 65537, -196604, 5, 65537, -196603, 5, 65537, -196602, 5, 65537, -196601, 5, 65537, -196600, 5, 65537, -196599, 5, 65537, -196598, 5, 65537, -196597, 5, 65537, -196596, 5, 65537, -196595, 5, 65537, -196594, 5, 65537, -196593, 5, 65537, -196592, 5, 65537, -196591, 5, 65537, -196590, 5, 65537, -196589, 5, 65537, -65544, 5, 65537, -65543, 5, 65537, -65542, 5, 65537, -65541, 5, 65537, -65540, 5, 65537, -65539, 5, 65537, -65538, 5, 65537, -65537, 5, 65537, -131072, 5, 65537, -131071, 5, 65537, -131070, 5, 65537, -131069, 5, 65537, -131068, 5, 65537, -131067, 5, 65537, -131066, 5, 65537, -131065, 5, 65537, -131064, 5, 65537, -131063, 5, 65537, -131062, 5, 65537, -131061, 5, 65537, -131060, 5, 65537, -131059, 5, 65537, -131058, 5, 65537, -131057, 5, 65537, -131056, 5, 65537, -131055, 5, 65537, -131054, 5, 65537, -131053, 5, 65537, -8, 5, 65537, -7, 5, 65537, -6, 5, 65537, -5, 5, 65537, -4, 5, 65537, -3, 5, 65537, -2, 5, 65537, -1, 5, 65537, -65536, 5, 65537, -65535, 5, 65537, -65534, 5, 65537, -65533, 5, 65537, -65532, 5, 65537, -65531, 5, 65537, -65530, 5, 65537, -65529, 5, 65537, -65528, 5, 65537, -65527, 5, 65537, -65526, 5, 65537, -65525, 5, 65537, -65524, 5, 65537, -65523, 5, 65537, -65522, 5, 65537, -65521, 5, 65537, -65520, 5, 65537, -65519, 5, 65537, -65518, 5, 65537, -65517, 5, 65537, 65528, 5, 65537, 65529, 5, 65537, 65530, 5, 65537, 65531, 5, 65537, 65532, 5, 65537, 65533, 5, 65537, 65534, 5, 65537, 65535, 5, 65537, 0, 4, 0, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 7, 4, 1, 8, 4, 1, 9, 4, 1, 10, 4, 1, 11, 4, 2, 12, 5, 65537, 13, 5, 65537, 14, 5, 65537, 15, 5, 65537, 16, 5, 65537, 17, 5, 65537, 18, 5, 65537, 19, 5, 65537, 131064, 5, 65537, 131065, 5, 65537, 131066, 5, 65537, 131067, 5, 65537, 131068, 5, 65537, 131069, 5, 65537, 131070, 5, 65537, 131071, 5, 65537, 65536, 4, 65536, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 10, 0, 65542, 10, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 4, 65538, 65548, 5, 65537, 65549, 5, 65537, 65550, 5, 65537, 65551, 5, 65537, 65552, 5, 65537, 65553, 5, 65537, 65554, 5, 65537, 65555, 5, 65537, 196600, 5, 65537, 196601, 5, 65537, 196602, 5, 65537, 196603, 5, 65537, 196604, 5, 65537, 196605, 5, 65537, 196606, 5, 65537, 196607, 5, 65537, 131072, 4, 65536, 131083, 4, 65538, 131084, 5, 65537, 131085, 5, 65537, 131086, 5, 65537, 131087, 5, 65537, 131088, 5, 65537, 131089, 5, 65537, 131090, 5, 65537, 131091, 5, 65537, 262136, 5, 65537, 262137, 5, 65537, 262138, 5, 65537, 262139, 5, 65537, 262140, 5, 65537, 262141, 5, 65537, 262142, 5, 65537, 262143, 5, 65537, 196608, 4, 65536, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 4, 65538, 196620, 5, 65537, 196621, 5, 65537, 196622, 5, 65537, 196623, 5, 65537, 196624, 5, 65537, 196625, 5, 65537, 196626, 5, 65537, 196627, 5, 65537, 327672, 5, 65537, 327673, 5, 65537, 327674, 5, 65537, 327675, 5, 65537, 327676, 5, 65537, 327677, 5, 65537, 327678, 5, 65537, 327679, 5, 65537, 262144, 4, 65536, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 4, 65538, 262156, 5, 65537, 262157, 5, 65537, 262158, 5, 65537, 262159, 5, 65537, 262160, 5, 65537, 262161, 5, 65537, 262162, 5, 65537, 262163, 5, 65537, 393208, 5, 65537, 393209, 5, 65537, 393210, 5, 65537, 393211, 5, 65537, 393212, 5, 65537, 393213, 5, 65537, 393214, 5, 65537, 393215, 5, 65537, 327680, 4, 65536, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 4, 65538, 327692, 5, 65537, 327693, 5, 65537, 327694, 5, 65537, 327695, 5, 65537, 327696, 5, 65537, 327697, 5, 65537, 327698, 5, 65537, 327699, 5, 65537, 458744, 5, 65537, 458745, 5, 65537, 458746, 5, 65537, 458747, 5, 65537, 458748, 5, 65537, 458749, 5, 65537, 458750, 5, 65537, 458751, 5, 65537, 393216, 4, 65536, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 4, 65538, 393228, 5, 65537, 393229, 5, 65537, 393230, 5, 65537, 393231, 5, 65537, 393232, 5, 65537, 393233, 5, 65537, 393234, 5, 65537, 393235, 5, 65537, 524280, 5, 65537, 524281, 5, 65537, 524282, 5, 65537, 524283, 5, 65537, 524284, 5, 65537, 524285, 5, 65537, 524286, 5, 65537, 524287, 5, 65537, 458752, 4, 65536, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 4, 65538, 458764, 5, 65537, 458765, 5, 65537, 458766, 5, 65537, 458767, 5, 65537, 458768, 5, 65537, 458769, 5, 65537, 458770, 5, 65537, 458771, 5, 65537, 589816, 5, 65537, 589817, 5, 65537, 589818, 5, 65537, 589819, 5, 65537, 589820, 5, 65537, 589821, 5, 65537, 589822, 5, 65537, 589823, 5, 65537, 524288, 4, 65536, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 4, 65538, 524300, 5, 65537, 524301, 5, 65537, 524302, 5, 65537, 524303, 5, 65537, 524304, 5, 65537, 524305, 5, 65537, 524306, 5, 65537, 524307, 5, 65537, 655352, 5, 65537, 655353, 5, 65537, 655354, 5, 65537, 655355, 5, 65537, 655356, 5, 65537, 655357, 5, 65537, 655358, 5, 65537, 655359, 5, 65537, 589824, 4, 65536, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 4, 65538, 589836, 5, 65537, 589837, 5, 65537, 589838, 5, 65537, 589839, 5, 65537, 589840, 5, 65537, 589841, 5, 65537, 589842, 5, 65537, 589843, 5, 65537, 720888, 5, 65537, 720889, 5, 65537, 720890, 5, 65537, 720891, 5, 65537, 720892, 5, 65537, 720893, 5, 65537, 720894, 5, 65537, 720895, 5, 65537, 655360, 4, 65536, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 4, 65538, 655372, 5, 65537, 655373, 5, 65537, 655374, 5, 65537, 655375, 5, 65537, 655376, 5, 65537, 655377, 5, 65537, 655378, 5, 65537, 655379, 5, 65537, 786424, 5, 65537, 786425, 5, 65537, 786426, 5, 65537, 786427, 5, 65537, 786428, 5, 65537, 786429, 5, 65537, 786430, 5, 65537, 786431, 5, 65537, 720896, 4, 65536, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 4, 65538, 720908, 5, 65537, 720909, 5, 65537, 720910, 5, 65537, 720911, 5, 65537, 720912, 5, 65537, 720913, 5, 65537, 720914, 5, 65537, 720915, 5, 65537, 851960, 5, 65537, 851961, 5, 65537, 851962, 5, 65537, 851963, 5, 65537, 851964, 5, 65537, 851965, 5, 65537, 851966, 5, 65537, 851967, 5, 65537, 786432, 4, 65536, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 4, 65538, 786444, 5, 65537, 786445, 5, 65537, 786446, 5, 65537, 786447, 5, 65537, 786448, 5, 65537, 786449, 5, 65537, 786450, 5, 65537, 786451, 5, 65537, 917496, 5, 65537, 917497, 5, 65537, 917498, 5, 65537, 917499, 5, 65537, 917500, 5, 65537, 917501, 5, 65537, 917502, 5, 65537, 917503, 5, 65537, 851968, 4, 65536, 851969, 8, 0, 851970, 8, 0, 851971, 8, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851975, 8, 0, 851976, 8, 0, 851977, 8, 0, 851978, 8, 0, 851979, 4, 65538, 851980, 5, 65537, 851981, 5, 65537, 851982, 5, 65537, 851983, 5, 65537, 851984, 5, 65537, 851985, 5, 65537, 851986, 5, 65537, 851987, 5, 65537, 983032, 5, 65537, 983033, 5, 65537, 983034, 5, 65537, 983035, 5, 65537, 983036, 5, 65537, 983037, 5, 65537, 983038, 5, 65537, 983039, 5, 65537, 917504, 4, 65536, 917505, 8, 0, 917506, 8, 0, 917507, 8, 0, 917508, 8, 0, 917509, 8, 0, 917510, 8, 0, 917511, 8, 0, 917512, 8, 0, 917513, 8, 0, 917514, 8, 0, 917515, 4, 65538, 917516, 5, 65537, 917517, 5, 65537, 917518, 5, 65537, 917519, 5, 65537, 917520, 5, 65537, 917521, 5, 65537, 917522, 5, 65537, 917523, 5, 65537, 1048568, 5, 65537, 1048569, 5, 65537, 1048570, 5, 65537, 1048571, 5, 65537, 1048572, 5, 65537, 1048573, 5, 65537, 1048574, 5, 65537, 1048575, 5, 65537, 983040, 4, 131072, 983041, 4, 131073, 983042, 4, 131073, 983043, 4, 131073, 983044, 5, 2, 983045, 8, 0, 983046, 5, 0, 983047, 4, 131073, 983048, 4, 131073, 983049, 4, 131073, 983050, 4, 131073, 983051, 4, 131074, 983052, 5, 65537, 983053, 5, 65537, 983054, 5, 65537, 983055, 5, 65537, 983056, 5, 65537, 983057, 5, 65537, 983058, 5, 65537, 983059, 5, 65537, 1114104, 5, 65537, 1114105, 5, 65537, 1114106, 5, 65537, 1114107, 5, 65537, 1114108, 5, 65537, 1114109, 5, 65537, 1114110, 5, 65537, 1114111, 5, 65537, 1048576, 5, 65537, 1048577, 5, 65537, 1048578, 5, 65537, 1048579, 5, 65537, 1048580, 5, 65537, 1048581, 5, 65537, 1048582, 5, 65537, 1048583, 5, 65537, 1048584, 5, 65537, 1048585, 5, 65537, 1048586, 5, 65537, 1048587, 5, 65537, 1048588, 5, 65537, 1048589, 5, 65537, 1048590, 5, 65537, 1048591, 5, 65537, 1048592, 5, 65537, 1048593, 5, 65537, 1048594, 5, 65537, 1048595, 5, 65537 )
script = ExtResource( 5 )

[node name="tilemap_house_interior_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 196612, 3, 3, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 262145, 0, 0, 262146, 0, 0, 524297, 3, 3, 589831, 536870915, 0, 589832, 2, 0, 589834, 3, 0 )

[node name="entity_mc" parent="tilemap_house_interior_decor" instance=ExtResource( 4 )]
position = Vector2( 104, 56 )

[node name="npc_patient4" type="Area2D" parent="tilemap_house_interior_decor"]
position = Vector2( 56, 56 )
collision_layer = 0
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
dialogue_transition = "res://maps/chapter4/chapter4-depression_dungeon.tscn"
appear_location = Vector2( 160, 848 )

[node name="col_patient4" type="CollisionShape2D" parent="tilemap_house_interior_decor/npc_patient4"]
shape = SubResource( 1 )

[node name="spr_patient4" type="Sprite" parent="tilemap_house_interior_decor/npc_patient4"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 0, 16, 16 )

[node name="dialogue_system" parent="tilemap_house_interior_decor/npc_patient4" instance=ExtResource( 6 )]

[node name="havekey-1" parent="tilemap_house_interior_decor/npc_patient4/dialogue_system" instance=ExtResource( 7 )]
dialogue_lines = [ [ "Ku dengar ini tentang ayahmu?", "Aku ingin melihatnya lagi", "Sekarang ia tiada...", "Ayolah, jangan sedih", "Apa yang kamu tau, kamu seorang psikolog", "Cuma tau hal yang baik aja!" ], [ "I heard that it was because of your father?", "I wanted to see him again", "Now that he's gone ...", "Hey now it's fine, don't be sad", "What do you know, you're a psychologist", "You people only knows the good side of things!" ] ]
dialogue_picture_resource = [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 8 ), null ]
dialogue_command = "transition"

[node name="nokey" parent="tilemap_house_interior_decor/npc_patient4/dialogue_system" instance=ExtResource( 7 )]
dialogue_lines = [ [ "..." ], [ "..." ] ]
dialogue_picture_resource = [ ExtResource( 8 ) ]

[node name="nokey-0" parent="tilemap_house_interior_decor/npc_patient4/dialogue_system" instance=ExtResource( 7 )]
dialogue_lines = [ [ "Halo Tiara, saya psikolog yang dikirim ibumu", "...", "Apa masalahmu?", "...", "Ayolah, kenapa kamu tidak mau berbicara?", "..." ], [ "Hello Tiara, I'm a psychologist sent by your mother", "...", "What is bothering you?", "...", "Come on, why wont you talk", "..." ] ]
dialogue_picture_resource = [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ) ]
dialogue_command = "transition"

[node name="area_change_map" parent="tilemap_house_interior_decor" instance=ExtResource( 3 )]
position = Vector2( 88, 264 )
destination = "res://maps/chapter4/chapter4-2.tscn"
location = Vector2( 264, 288 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tilemap_house_interior_decor/area_change_map"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )
[connection signal="body_entered" from="tilemap_house_interior_decor/npc_patient4" to="tilemap_house_interior_decor/npc_patient4" method="_on_npc_patient4_body_entered"]
[connection signal="body_exited" from="tilemap_house_interior_decor/npc_patient4" to="tilemap_house_interior_decor/npc_patient4" method="_on_npc_patient4_body_exited"]
